# ShortcutMonoWAD

./: .gitignore  Dockerfile  PLAN.md  requirements.txt  run.sh
.claude/: settings.json
my_implementation/: .gitignore  .project-root  CLAUDE.md  README.md  pyproject.toml  run.sh
my_implementation/configs/: config.yaml
my_implementation/configs/data/: kitti.yaml
my_implementation/configs/detector/: monowad.yaml
my_implementation/configs/logger/: wandb.yaml
my_implementation/configs/optimizer/: adam.yaml
my_implementation/configs/paths/: default.yaml
my_implementation/configs/scheduler/: cosine.yaml
my_implementation/configs/trainer/: default.yaml
my_implementation/notebooks/: dataset_testing.ipynb  explore_KITTI_dataset.ipynb
my_implementation/scripts/: eval.py  train.py
my_implementation/scripts/preprocess/: depth_gt_compute.py  imdb_precompute_3d.py
my_implementation/src/monowad/: __init__.py  module.py
my_implementation/src/monowad/data/: collate.py  datamodule.py  dataset.py  transforms.py
my_implementation/src/monowad/eval/: eval.py  kitti_eval.py  result_writer.py
my_implementation/src/monowad/models/: MonoWAD.py  anchors.py  backbone.py  blocks.py  dcn.py  detector.py  losses.py
my_implementation/src/monowad/models/backbone/: dlaup.py
my_implementation/src/monowad/models/diffusion/: denoising_diffusion_pytorch.py
my_implementation/src/monowad/models/heads/: __init__.py  detection_3d_head.py
my_implementation/src/monowad/utils/: annotations.py  geometry.py
notebooks/: explore_KITTI_dataset.ipynb
scripts/: pack_hdf5.py
(+4 files in other folders)
