[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "monowad"
version = "0.1.0"
description = "MonoWAD — Weather-Adaptive Diffusion Model for Monocular 3D Object Detection (Hydra + Lightning + WandB)"
requires-python = ">=3.10"
dependencies = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "numpy==1.26.4",
    "hydra-core",
    "pytorch-lightning",
    "pyrootutils",
    "wandb",
    "h5py",
    "einops",
    "opencv-python",
    "scikit-image",
    "numba",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
dev = ["jupyter", "pytest", "ipykernel"]

[tool.setuptools.packages.find]
where = ["src"]

# Editable install:  pip install -e .
# Imports then resolve as:  from monowad.data.datamodule import KittiDataModule
